[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/games/GhostRun/bg.png" type="Texture2D" id=1]
[ext_resource path="res://scenes/games/GhostRun/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/games/GhostRun/Ground.png" type="Texture2D" id=3]
[ext_resource path="res://scenes/games/GhostRun/GhostRun.gd" type="Script" id=6]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PackedVector2Array( 128, 128, 0, 128, 0, 0, 128, 0 )

[sub_resource type="TileSet" id=2]
0/name = "Ground.png 0"
0/texture = ExtResource( 3 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 128, 128 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[node name="GhostRun" type="Node2D"]
script = ExtResource( 6 )

[node name="BG" type="Sprite2D" parent="."]
position = Vector2( 400.5, -108.5 )
scale = Vector2( 100, 60 )
texture = ExtResource( 1 )

[node name="Player" parent="." instance=ExtResource( 2 )]

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 2 )
cell_size = Vector2( 128, 128 )
format = 1
tile_data = PackedInt32Array( 131067, 0, 0, 131068, 0, 0, 131069, 0, 0, 131070, 0, 0, 131071, 0, 0, 65536, 0, 0, 65537, 0, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 65541, 0, 0, 65542, 0, 0, 65543, 0, 0, 65544, 0, 0, 196603, 0, 0, 196604, 0, 0, 196605, 0, 0, 196606, 0, 0, 196607, 0, 0, 131072, 0, 0, 131073, 0, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 262139, 0, 0, 262140, 0, 0, 262141, 0, 0, 262142, 0, 0, 262143, 0, 0, 196608, 0, 0, 196609, 0, 0, 196610, 0, 0, 196611, 0, 0, 196612, 0, 0, 196613, 0, 0, 196614, 0, 0, 196615, 0, 0, 196616, 0, 0, 327675, 0, 0, 327676, 0, 0, 327677, 0, 0, 327678, 0, 0, 327679, 0, 0, 262144, 0, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 0, 0, 262151, 0, 0, 262152, 0, 0 )

[node name="TreeSpawn" type="Marker2D" parent="TileMap"]
position = Vector2( 1000, 80 )

[node name="CloudSpawn" type="Marker2D" parent="TileMap"]
position = Vector2( 1000, -60 )

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
autostart = true

[node name="SpawnTimer2" type="Timer" parent="."]
wait_time = 1.75
one_shot = true
autostart = true

[node name="Spawns" type="Node2D" parent="."]

[node name="ScalingTimer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
[connection signal="timeout" from="SpawnTimer2" to="." method="_on_SpawnTimer2_timeout"]
[connection signal="timeout" from="ScalingTimer" to="." method="_on_ScalingTimer_timeout"]
